crates/fixtures/tests/snapshots/hostile__content_note_on_last_line.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 102400,
    "height": 61440,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 0,
          "ty": 0
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 10240,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "aa\n",
            "glyphs": [
              {
                "id": 28,
                "x": 0,
                "y": 9733,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 28,
                "x": 5212,
                "y": 9733,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 0,
                "x": 10424,
                "y": 9733,
                "text": {
                  "start": 2,
                  "end": 3
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 10240,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "bb\n",
            "glyphs": [
              {
                "id": 29,
                "x": 0,
                "y": 22021,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 29,
                "x": 5806,
                "y": 22021,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 0,
                "x": 11714,
                "y": 22021,
                "text": {
                  "start": 2,
                  "end": 3
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 10240,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "cc\n",
            "glyphs": [
              {
                "id": 30,
                "x": 0,
                "y": 34309,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 30,
                "x": 4997,
                "y": 34309,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 0,
                "x": 9994,
                "y": 34309,
                "text": {
                  "start": 2,
                  "end": 3
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 10240,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "dd\n",
            "glyphs": [
              {
                "id": 31,
                "x": 0,
                "y": 46597,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 31,
                "x": 5806,
                "y": 46597,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 0,
                "x": 11612,
                "y": 46597,
                "text": {
                  "start": 2,
                  "end": 3
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 10240,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "ee",
            "glyphs": [
              {
                "id": 32,
                "x": 0,
                "y": 58885,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 32,
                "x": 5222,
                "y": 58885,
                "text": {
                  "start": 1,
                  "end": 2
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  },
  {
    "width": 102400,
    "height": 61440,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 0,
          "ty": 0
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 10240,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "Last-line note",
            "glyphs": [
              {
                "id": 13,
                "x": 0,
                "y": 58885,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 28,
                "x": 6103,
                "y": 58885,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 46,
                "x": 11315,
                "y": 58885,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 47,
                "x": 15759,
                "y": 58885,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 496,
                "x": 19087,
                "y": 58885,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 39,
                "x": 22282,
                "y": 58885,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 36,
                "x": 25334,
                "y": 58885,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 41,
                "x": 28386,
                "y": 58885,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 32,
                "x": 34591,
                "y": 58885,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 1,
                "x": 39813,
                "y": 58885,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 41,
                "x": 42199,
                "y": 58885,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 42,
                "x": 48404,
                "y": 58885,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 47,
                "x": 53923,
                "y": 58885,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 32,
                "x": 57251,
                "y": 58885,
                "text": {
                  "start": 13,
                  "end": 14
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
