crates/fixtures/tests/snapshots/hostile__content_notes_nested_three_deep.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 102400,
    "height": 61440,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 0,
          "ty": 0
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 10240,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "Anchor text.",
            "glyphs": [
              {
                "id": 2,
                "x": 0,
                "y": 9733,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 41,
                "x": 6799,
                "y": 9733,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 30,
                "x": 13004,
                "y": 9733,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 35,
                "x": 17888,
                "y": 9733,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 42,
                "x": 24042,
                "y": 9733,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 45,
                "x": 29664,
                "y": 9733,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 1,
                "x": 33996,
                "y": 9733,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 47,
                "x": 36382,
                "y": 9733,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 32,
                "x": 39710,
                "y": 9733,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 51,
                "x": 44932,
                "y": 9733,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 47,
                "x": 50318,
                "y": 9733,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 473,
                "x": 53646,
                "y": 9733,
                "text": {
                  "start": 11,
                  "end": 12
                }
              }
            ],
            "layer": "content"
          }
        ]
      },
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 0,
          "ty": 0
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 10240,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "First note",
            "glyphs": [
              {
                "id": 7,
                "x": 0,
                "y": 26117,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 36,
                "x": 5816,
                "y": 26117,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 45,
                "x": 8868,
                "y": 26117,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 46,
                "x": 13097,
                "y": 26117,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 47,
                "x": 17541,
                "y": 26117,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 1,
                "x": 20869,
                "y": 26117,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 41,
                "x": 23255,
                "y": 26117,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 42,
                "x": 29460,
                "y": 26117,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 47,
                "x": 34979,
                "y": 26117,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 32,
                "x": 38307,
                "y": 26117,
                "text": {
                  "start": 9,
                  "end": 10
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 10240,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "Second note",
            "glyphs": [
              {
                "id": 20,
                "x": 0,
                "y": 42501,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 32,
                "x": 5243,
                "y": 42501,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 30,
                "x": 10465,
                "y": 42501,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 42,
                "x": 15462,
                "y": 42501,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 41,
                "x": 21084,
                "y": 42501,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 31,
                "x": 27289,
                "y": 42501,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 1,
                "x": 33095,
                "y": 42501,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 41,
                "x": 35481,
                "y": 42501,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 42,
                "x": 41686,
                "y": 42501,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 47,
                "x": 47205,
                "y": 42501,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 32,
                "x": 50533,
                "y": 42501,
                "text": {
                  "start": 10,
                  "end": 11
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 10240,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "Third note",
            "glyphs": [
              {
                "id": 21,
                "x": 0,
                "y": 58885,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 35,
                "x": 6185,
                "y": 58885,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 36,
                "x": 12339,
                "y": 58885,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 45,
                "x": 15391,
                "y": 58885,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 31,
                "x": 19620,
                "y": 58885,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 1,
                "x": 25426,
                "y": 58885,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 41,
                "x": 27812,
                "y": 58885,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 42,
                "x": 34017,
                "y": 58885,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 47,
                "x": 39536,
                "y": 58885,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 32,
                "x": 42864,
                "y": 58885,
                "text": {
                  "start": 9,
                  "end": 10
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
